# nanotins

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  NOTICE  README.md  THIRD-PARTY-LICENSES.md
.github/workflows/: ci.yml  ipv6.yml
examples/dpar/: CMakeLists.txt  dpar_example.hpp  dpar_main.cpp  rules.example.txt  test_dpar_example.cpp
examples/lldp/: CMakeLists.txt  lldp.hpp  lldp_main.cpp  rules.example.txt  test_lldp.cpp
examples/pcapng2json/: CMakeLists.txt  README.md  pcapng2json.cpp  pcapng2json.hpp  test_pcapng2json.cpp
gputins/: CMakeLists.txt  README.md
gputins/include/gputins/: dag_decode_gpu.hpp  gpu.hpp  protocol_decode_gpu.hpp  struct_spec_gpu.hpp  wire_spec_gpu.hpp
nanotins/: CMakeLists.txt  README.md
nanotins/docs/: GPU_BULK_INTEGRATION.md  architecture.html  nanotins.html  plan_ipv6_extension_headers_tlv.md  the_case_for_learning_from_vbvx.md
nanotins/include/nanotins/: arrow_glue.hpp  bits.hpp  bulk.hpp  column_traits.hpp  dag_bulk.hpp  dag_decode.hpp  describe.hpp  dpar.hpp  dpar_arrow.hpp  dpar_palette.hpp  endian.hpp  fixed_string.hpp  gptp.hpp  ipv4_children.hpp  ipv4_children_bulk.hpp  ipv6_children.hpp  ipv6_children_bulk.hpp  pcap_blocks.hpp  protocol_decode.hpp  protocol_decode_bulk.hpp  protocol_decode_gpu.hpp  protocol_specs.hpp  protocol_specs_ptp.hpp  protocol_specs_someip.hpp  protocols.hpp  reflect.hpp  someip_sd.hpp  someip_sd_bulk.hpp  someip_tlv.hpp  spec_dag.hpp  struct_spec.hpp  struct_spec_soa.hpp  tlv.hpp  wire_spec.hpp  wire_spec_soa.hpp
nanotins/src/: pcap_blocks_ref.cpp
nanotins/tests/: pcap_fixtures.hpp  test_bulk_smoke.cpp  test_dag_bulk.cpp  test_dag_decode.cpp  test_dpar.cpp  test_dpar_arrow.cpp  test_dpar_palette.cpp  test_gptp.cpp  test_ipv4_options.cpp  test_ipv4_options_bulk.cpp  test_ipv6_children.cpp  test_ipv6_children_bulk.cpp  test_ipv6_ext_walk.cpp  test_pcap_blocks.cpp  test_protocol_specs.cpp  test_protocols.cpp  test_reflect_smoke.cpp  test_soa_scatter.cpp  test_someip.cpp  test_someip_sd.cpp  test_someip_sd_bulk.cpp  test_someip_tlv.cpp  test_spec_dag.cpp  test_struct_spec_ipv4.cpp  test_struct_spec_ipv6.cpp  test_struct_spec_ptp.cpp  test_struct_spec_udp.cpp  test_tlv_cursor.cpp  test_wire_spec_ipv4.cpp  test_wire_spec_ipv6.cpp  test_wire_spec_ptp.cpp  test_wire_spec_udp.cpp
scripts/: standalone_smoke.sh
soatins/: CMakeLists.txt  README.md
soatins/bench/avro/: README.md  bench_c.c  bench_cpp.cpp  bench_python.py  run_bench.sh  update_readme.py  verify.py
soatins/bench/avro/bench_rust/: Cargo.toml
soatins/bench/avro/bench_rust/src/: main.rs
soatins/include/soatins/: arrow_glue.hpp  avro_glue.hpp  bits.hpp  column_traits.hpp  describe.hpp  endian.hpp  fixed_string.hpp  portability.hpp  reflect.hpp  sink.hpp
soatins/tests/: check_avro_golden.py  check_avro_ocf_golden.py  gen_avro_golden.cpp  gen_avro_ocf_golden.cpp  test_column_sink.cpp  test_reflect_smoke.cpp  test_soa_fixed.cpp  test_soa_fixed_arrow.cpp  test_soa_scatter.cpp
